--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify",
-  "version": "0.1.7",
+  "version": "0.1.14",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
   "scripts": {
@@ -11,8 +11,7 @@
     "format": "tsfmt --useTsfmt tsfmt.json -r src/**/*.ts",
     "lint": "tslint 'src/Common/**/*.ts",
     "generate-docs-local": "typedoc --out docs src",
-    "generate-docs-root": "typedoc --out ../../docs src",
-    "publish": "npm version patch && npm publish"
+    "generate-docs-root": "typedoc --out ../../docs src"
   },
   "repository": {
     "type": "git",
