--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -4,12 +4,12 @@
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "node_modules/.bin/jest --coverage",
-    "build-with-test": "npm run clean && npm test && node_modules/.bin/tsc && node_modules/.bin/webpack",
-    "build": "npm run clean && node_modules/.bin/tsc && node_modules/.bin/webpack",
-    "clean": "node_modules/.bin/rimraf lib lib-esm dist",
-    "format": "node_modules/.bin/tsfmt --useTsfmt tsfmt.json -r src/**/*.ts",
-    "lint": "node_modules/.bin/tslint src/Common/**/*.ts",
+    "test": "jest --coverage",
+    "build-with-test": "npm run clean && npm test && tsc && webpack",
+    "build": "npm run clean && tsc && webpack",
+    "clean": "rimraf lib lib-esm dist",
+    "format": "tsfmt --useTsfmt tsfmt.json -r src/**/*.ts",
+    "lint": "tslint 'src/Common/**/*.ts",
     "generate-docs-local": "typedoc --out docs src",
     "generate-docs-root": "typedoc --out ../../docs src"
   },
