update build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,11 @@
-
 language: node_js
-node_js:
-  - "4.4"
-  - "5"
-  - "6"
-  - "7"
-  - "8"
-env:
-  - TEST_SCRIPT=test
-  - BUILD_SCRIPT=build
-
 sudo: false
-
-matrix:
-  include:
-  - node_js: "node"
-
+node_js:
+  - 6
+  - 5
+install:
+  - npm install
 script:
-  - npm run $TEST_SCRIPT
-  - npm run $BUILD_SCRIPT
+  - npm run bootstrap
+  - npm run test
+  - npm run build
