--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: node_js
 sudo: false
 node_js:
-  - 6
   - 5
+  - 6
+  - 7
+  - 8
 install:
   - npm install
 script:
   - npm run bootstrap
+  - npm run lint
   - npm run test
   - npm run build
