--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -31,7 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "find": "^0.2.7",
-    "jest": "^20.0.4",
+    "jest": "^21.x",
     "json-loader": "^0.5.7",
     "prepend-file": "^1.3.1",
     "prettier": "^1.7.4",
