--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/jest": "^20.0.7",
     "@types/node": "^8.0.24",
-    "jest": "^20.0.4",
+    "jest": "^21.x",
     "json-loader": "^0.5.7",
     "lerna": "^2.4.0",
     "rimraf": "^2.6.2",
