--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
 script:
   - npm run bootstrap
   - npm run lint
-  - npm run test
+  - npm run test && node node_modules/.bin/codecov || exit 0;
   - npm run build
