raise unit tests for aws amplify and lint code

--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && tsc && webpack",
     "clean": "rimraf lib lib-esm dist",
     "format": "tsfmt --useTsfmt tsfmt.json -r src/**/*.ts",
-    "lint": "tslint 'src/Common/**/*.ts'",
+    "lint": "tslint 'src/**/*.ts'",
     "generate-docs-local": "typedoc --out docs src",
     "generate-docs-root": "typedoc --out ../../docs src"
   },
