--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -71,6 +71,14 @@
       "./__mocks__/LocalStorage.js"
     ],
     "testEnvironment": "jsdom",
-    "mapCoverage": true
+    "mapCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
