--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "test": "lerna run -- test",
+    "coverage": "codecov",
     "build": "lerna run -- build",
     "clean": "lerna run -- clean",
     "format": "lerna run -- format",
@@ -12,7 +13,8 @@
   },
   "pre-commit": [
     "lint",
-    "test"
+    "test",
+    "build"
   ],
   "repository": {
     "type": "git",
