--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bootstrap": "lerna bootstrap",
     "test": "lerna run -- test",
     "coverage": "codecov",
-    "docs": "typedoc --out docs/api/ packages/aws-amplify/src/ --ignoreCompilerErrors --hideGenerator --readme ../index.md --entryPoint /docs/api/",
+    "docs": "typedoc --out docs/api/ packages/aws-amplify/src/ --ignoreCompilerErrors --hideGenerator",
     "build": "lerna run -- build",
     "clean": "lerna run -- clean",
     "format": "lerna run -- format",
