--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,9 @@
 theme: jekyll-theme-midnight
 show_downloads: "true"
-include: api/**/_*.html
+includes: 
+- api
+- api/assets
+- api/classes
+- api/enums
+- api/interfaces
+- api/modules
