--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.30",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
     "build-with-test": "npm run clean && npm test && tsc && webpack",
