--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^1.19.0",
-    "aws-sdk": "^2.101.0",
+    "aws-sdk": "2.177.0",
     "axios": "^0.17.0",
     "querystring-browser": "^1.0.4"
   },
