--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -2,7 +2,7 @@
   "name": "aws-amplify",
   "version": "0.1.33",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
-  "main": "./lib/index.js",
+  "main": "./dist/aws-amplify.min.js",
   "scripts": {
     "test": "jest --coverage",
     "build-with-test": "npm run clean && npm test && tsc && webpack",
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^1.19.0",
-    "aws-sdk": "^2.101.0",
+    "aws-sdk": "2.177.0",
     "axios": "^0.17.0",
     "querystring-browser": "^1.0.4"
   },
