--- a/packages/aws-amplify-react/package.json
+++ b/packages/aws-amplify-react/package.json
@@ -9,7 +9,7 @@
     "build-with-test": "npm test && npm run build"
   },
   "devDependencies": {
-    "aws-amplify": "^0.1.x",
+    "aws-amplify": "../aws-amplify",
     "babel-cli": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-polyfill": "^6.26.0",
