--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -49,10 +49,9 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "amazon-cognito-identity-js": "../amazon-cognito-identity-js",
     "aws-sdk": "^2.185.0",
-    "axios": "^0.17.0",
-    "querystring-browser": "^1.0.4"
+    "amazon-cognito-identity-js": "../amazon-cognito-identity-js",
+    "axios": "^0.17.0"
   },
   "jest": {
     "transform": {
