--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ install:
 script:
   - npm run bootstrap
   - npm run lint
-  - cd packages/aws-amplify && npm run test
-  - cd packages/aws-amplify-react && npm run test
+  - npm run test
   - npm run coverage
   - npm run build
   - npm run docs
