--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "link": "lerna link",
     "pre-commit": "lerna exec yarn test --scope aws-amplify",
     "test": "lerna exec yarn test",
     "coverage": "codecov",
@@ -16,6 +15,10 @@
   },
   "pre-commit": [
     "pre-commit"
+  ],
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
   "repository": {
     "type": "git",
