--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 sudo: false
 node_js:
-  - 6
+  - 8
 install:
+  - yarn config set workspaces-experimental true
   - yarn
 script:
   - yarn bootstrap
-  - yarn link
   - yarn test --scope aws-amplify
   - yarn test --scope aws-amplify-react
   - yarn coverage
