add build before test for workspaces

--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -84,7 +84,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "jsdoc": "^3.4.0",
-    "react": "^16.0.0-alpha.6",
+    "react": "^16.0.0",
     "react-native": "^0.44.0",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
