--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - yarn
 script:
   - yarn bootstrap
+  - yarn build
   - yarn test --scope aws-amplify
   - yarn test --scope aws-amplify-react
   - yarn coverage
