--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "lerna exec yarn test",
     "coverage": "codecov",
     "docs": "typedoc --out docs/api/ packages/aws-amplify/src/ --ignoreCompilerErrors --hideGenerator && touch docs/api/.nojekyll",
-    "build": "lerna run -- build",
+    "build": "lerna exec yarn build",
     "clean": "lerna run -- clean",
     "format": "lerna run -- format",
     "lint": "lerna run -- lint"
