--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/aws/aws-amplify.git"
   },
   "author": "Amazon Web Services",
-  "license": "Apache",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/aws/aws-amplify/issues"
   },
