--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -62,8 +62,7 @@
   "types": "./index.d.ts",
   "dependencies": {
     "buffer": "4.9.1",
-    "create-hash": "^1.1.3",
-    "create-hmac": "^1.1.6",
+    "crypto-browserify": "1.0.9",
     "js-cookie": "^2.1.4",
     "randombytes": "^2.0.6"
   },
