--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "1.29.0",
-    "aws-sdk": "^2.185.0",
+    "aws-sdk": "2.177.0",
     "axios": "^0.17.0"
   },
   "jest": {
