--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -44,7 +44,7 @@
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.1",
-    "ts-jest": "^20.0.10",
+    "ts-jest": "^22.0.0",
     "tslint": "^5.7.0",
     "tslint-config-airbnb": "^5.3.0",
     "typedoc-dep-update": "^0.9.0",
@@ -83,6 +83,10 @@
         "lines": 80,
         "statements": 80
       }
-    }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "index.ts"
+    ]
   }
 }
