--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -85,8 +85,7 @@
       }
     },
     "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "index.ts"
+      "/node_modules/"
     ]
   }
 }
