--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -56,7 +56,8 @@
   "dependencies": {
     "amazon-cognito-identity-js": "1.31.0",
     "aws-sdk": "2.177.0",
-    "axios": "^0.17.0"
+    "axios": "^0.17.0",
+    "uuid": "^3.2.1"
   },
   "jest": {
     "transform": {
