--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,27 @@
-theme: jekyll-theme-midnight
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: AWS-Amplify Developer Documentation
+email: your-email@example.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com 
+
 show_downloads: "true"
 include: 
 - api
@@ -7,3 +30,81 @@ include:
 - api/enums
 - api/interfaces
 - api/modules
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+
+
+# Build settings
+markdown: kramdown
+plugins:
+  - jekyll-feed
+
+
+# Amplify theme settings
+amplify:
+    baseurl: /aws-amplify
+    color_theme:  # Available themes: blue (default), green, purple, red and yellow
+    header:
+        logo:
+            text: AWS-Amplify
+            image: true
+        nav:
+            - item_name: Quick Start
+              item_url: '/media/quick_start'
+            - item_name: Developer Guide
+              item_url: '/media/developer_guide'
+            - item_name: Community
+              item_url: 'https://gitter.im/AWS-Amplify/Lobby/'
+            - item_name: Blog
+              item_url: '#sdf'
+            - item_name: Github
+              item_icon: github
+              item_url: 'https://github.com/aws/aws-amplify'
+    footer:
+        content:
+            logo:
+                text: AWS Amplify is supported by Amazon Web Services
+                image: true
+            copyright: © 2017-2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+        social_list:
+            - network_name: chat
+              profile_url: 'https://gitter.im/AWS-Amplify/Lobby/'
+            - network_name: twitter
+              profile_url: 'https://twitter.com/search?q=%23awsamplify&src=typd'
+            - network_name: github
+              profile_url: 'https://github.com/aws/aws-amplify'
+            - network_name: youtube
+              profile_url: 'https://www.youtube.com/watch?v=vAjf3lyjf8c'
+    google_analytics:
+        tracking_code: # Add your Google Analytics tracking code to activate Google Analytics
+    comments:
+        disqus_forum_shortname: # Add your disqus forum shortname to activate comments
+
+# SASS settings
+sass:
+    sass_dir: ./amplify-theme/_sass
+    style: :compressed
+
+# Jekyll settings
+layouts_dir: ./amplify-theme/_layouts
+includes_dir: ./amplify-theme/_includes
+exclude: [ 'README.md', 'CHANGELOG.md' ]
+permalink: /:title/
+
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
