--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify",
-  "version": "0.2.6",
+  "version": "0.2.12",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -56,7 +56,8 @@
   "dependencies": {
     "amazon-cognito-identity-js": "^2.0.0",
     "aws-sdk": "2.193.0",
-    "axios": "^0.17.0"
+    "axios": "^0.17.0",
+    "react-native": "^0.53.3"
   },
   "jest": {
     "transform": {
