--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -24,9 +24,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/aws/amazon-cognito-identity-js.git"
+    "url": "https://github.com/aws/aws-amplify.git"
   },
-  "license": "SEE LICENSE IN LICENSE.txt",
+  "license": "See LICENSE",
   "licenses": [
     {
       "type": "Amazon Software License",
