updated link format

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -67,7 +67,7 @@ amplify:
             - item_name: Quick Start
               item_url: '/media/quick_start'
             - item_name: Docs
-              item_url: '/media/developer_guide/'
+              item_url: '/media/developer_guide'
             - item_name: API
               item_url: '/api/'
             - item_name: Blog
@@ -115,7 +115,7 @@ category_list:
           excerpt: Drop-in analytics to track user sessions, custom user attributes, and in-app metrics.
           cta: Read more
           class: aws-icon-ps-60-pie-bar-charts 
-          url: '/media/analytics_guide/'
+          url: '/media/analytics_guide'
           services:
             - title: AWS Pinpoint,
               url: https://aws.amazon.com/pinpoint/
@@ -127,7 +127,7 @@ category_list:
           excerpt: A simple and secure solution for making HTTP requests.
           cta: Read more
           class: aws-icon-ps-60-database-server
-          url: '/media/api_guide/'    
+          url: '/media/api_guide'    
           services:
             - title: AWS API Gateway
               url: https://aws.amazon.com/api-gateway
@@ -135,7 +135,7 @@ category_list:
           excerpt:  Authentication APIs with pre-built UI components for your app.  
           cta: Read more
           class: aws-icon-ps-60-shield-circle
-          url: '/media/authentication_guide/'
+          url: '/media/authentication_guide'
           services:
             - title: AWS Cognito ,
               url: https://aws.amazon.com/cognito/
@@ -147,7 +147,7 @@ category_list:
           excerpt: A simple mechanism for managing user content in public or private storage.
           cta: Read more
           class: aws-icon-ps-60-file-box
-          url: '/media/storage_guide/'   
+          url: '/media/storage_guide'   
           services:
               - title: AWS S3
                 url: https://aws.amazon.com/s3/
@@ -155,7 +155,7 @@ category_list:
           excerpt: Push notifications with campaign analytics and targeting.
           cta: Read more
           class: aws-icon-ps-60-bubble-gear
-          url: '/media/push_notifications_setup/'   
+          url: '/media/push_notifications_setup'   
           services:
               - title: AWS Pinpoint
                 url: https://aws.amazon.com/pinpoint/
@@ -165,26 +165,26 @@ category_list:
         - title: Cache 
           excerpt: A generic LRU cache for storing data with priority and expiration settings. 
           cta: Read more
-          url: '/media/cache_guide/'  
+          url: '/media/cache_guide'  
         - title: Hub  
           excerpt: A lightweight Pub-Sub system.
           cta: Read more
-          url: '/media/hub_guide/' 
+          url: '/media/hub_guide' 
         - title: I18n  
           excerpt: A lightweight internationalization solution.
           cta: Read more
-          url: '/media/i18n_guide/'  
+          url: '/media/i18n_guide'  
         - title: Logger  
           excerpt: Console logging utility.
           cta: Read more
-          url: '/media/logger_guide/'  
+          url: '/media/logger_guide'  
     -  category: CLI
        title: CLI
        subs:
         - title: AWS Mobile CLI
           excerpt: A CLI to create and manage your app's backend. 
           cta: Read more
-          url: '/media/cli_guide/'       
+          url: '/media/cli_guide'       
 
 defaults:
   -
