Add PubSub category. Add AWSIotProvider and MqttOverWSProvider providers.

--- a/packages/aws-amplify/tsconfig.json
+++ b/packages/aws-amplify/tsconfig.json
@@ -9,7 +9,11 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "allowJs": false,
-        "declaration": true
+        "declaration": true,
+        "typeRoots": [
+            "./node_modules/@types",
+            "../../node_modules/@types"
+        ]
     },
     "include": ["src/**/*"]
  }
