--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "homepage": "https://github.com/aws/aws-amplify#readme",
   "devDependencies": {
     "@types/jest": "^20.0.7",
-    "@types/node": "^8.0.24",
+    "@types/node": "^8.9.5",
     "codecov": "^1.0.1",
-    "jest": "^22.x",
+    "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lerna": "^2.4.0",
     "pre-commit": "^1.2.2",
@@ -42,7 +42,7 @@
     "source-map-loader": "^0.2.1",
     "ts-jest": "^22.0.0",
     "tslint": "^5.7.0",
-    "tslint-config-airbnb": "^5.3.0",
+    "tslint-config-airbnb": "^5.8.0",
     "typedoc": "^0.9.0",
     "typescript": "2.6.2",
     "typescript-formatter": "^6.0.0",
