--- a/packages/aws-amplify-react/package.json
+++ b/packages/aws-amplify-react/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "aws-amplify-react",
-  "version": "0.1.38",
-  "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "jest --coverage --updateSnapshot",
-    "build": "babel src --presets babel-preset-react --out-dir dist --copy-files",
-    "build-with-test": "npm test && npm run build"
-  },
-  "devDependencies": {
-    "aws-amplify": "^0.2.x",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.3",
-    "enzyme-to-json": "^3.2.1",
-    "jest": "^22.x",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aws/aws-amplify.git"
-  },
-  "author": "Amazon Web Services",
-  "license": "Apache-2.0",
-  "jest": {
-    "setupTestFrameworkScriptFile": "./test_Setup/enzymeSetup.js",
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
-      }
+    "name": "aws-amplify-react",
+    "version": "0.1.38",
+    "description":
+        "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "jest --coverage --updateSnapshot",
+        "test-watch": "jest --watch",
+        "build":
+            "babel src --presets babel-preset-react --out-dir dist --copy-files",
+        "build-with-test": "npm test && npm run build"
+    },
+    "devDependencies": {
+        "aws-amplify": "^0.2.x",
+        "babel-cli": "^6.26.0",
+        "babel-jest": "^21.2.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-airbnb": "^2.4.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2017": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "enzyme": "^3.1.0",
+        "enzyme-adapter-react-16": "^1.0.3",
+        "enzyme-to-json": "^3.2.1",
+        "jest": "^22.x",
+        "jest-enzyme": "^6.0.0",
+        "react": "^16.0.0",
+        "react-dom": "^16.0.0",
+        "react-test-renderer": "^16.0.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/aws/aws-amplify.git"
+    },
+    "author": "Amazon Web Services",
+    "license": "Apache-2.0",
+    "jest": {
+        "setupTestFrameworkScriptFile": "./test_Setup/enzymeSetup.js",
+        "snapshotSerializers": ["enzyme-to-json/serializer"],
+        "coverageThreshold": {
+            "global": {
+                "branches": 80,
+                "functions": 80,
+                "lines": 80,
+                "statements": 80
+            }
+        }
+    },
+    "dependencies": {
+        "qrcode.react": "^0.8.0"
     }
-  },
-  "dependencies": {
-    "qrcode.react": "^0.8.0"
-  }
 }
