--- a/packages/aws-amplify-react-native/android/build.gradle
+++ b/packages/aws-amplify-react-native/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.google.gms:google-services:3.1.1'
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.firebase:firebase-jobdispatcher:0.6.0'
-    compile 'com.google.android.gms:play-services-auth:+'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
 
     compile('com.amazonaws:aws-android-sdk-auth-core:2.6.+@aar') {
         transitive = false;
