--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,10 @@
 /docs/ @mbahar
 /packages/aws-amplify-angular/ @haverchuck
+/packages/aws-amplify/src/Auth/ @richardzcode
+/packages/aws-amplify/src/Analytics/ @powerful23
+/packages/aws-amplify-react/ @powerful23
+/packages/aws-amplify/src/API/ @elorzafe
+/packages/aws-amplify/src/Storage/ @nidsharm
+/packages/aws-amplify/src/PubSub/ @manueliglesias
+/packages/amazon-cognito-identity-js/ @yuntuowang
+/.github/ @mlabieniec
