--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,9 +1,11 @@
 /docs/ @mbahar
 /packages/aws-amplify-angular/ @haverchuck
 /packages/aws-amplify/src/Auth/ @richardzcode
+/packages/aws-amplify/src/Analytics/ @richardzcode
 /packages/aws-amplify/src/Analytics/ @powerful23
 /packages/aws-amplify-react/ @powerful23
 /packages/aws-amplify/src/API/ @elorzafe
+/packages/aws-amplify/src/Cache/ @elorzafe
 /packages/aws-amplify/src/Storage/ @nidsharm
 /packages/aws-amplify/src/PubSub/ @manueliglesias
 /packages/amazon-cognito-identity-js/ @yuntuowang
