--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@aws-amplify/common",
-  "version": "0.0.2",
-  "description": "Common category of aws-amplify",
+  "name": "@aws-amplify/auth",
+  "version": "0.0.1",
+  "description": "The Auth category of AWS Amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -14,6 +14,7 @@
     "lint": "tslint 'src/**/*.ts'"
   },
   "react-native": {
+    "./lib/Cache": "./lib/Cache/reactnative.js",
     "./lib/Common/ClientDevice": "./lib/Common/ClientDevice/reactnative.js",
     "./lib/Common/RNComponents": "./lib/Common/RNComponents/reactnative.js"
   },
@@ -45,13 +46,18 @@
     "ts-jest": "^22.0.0",
     "tslint": "^5.7.0",
     "tslint-config-airbnb": "^5.3.0",
+    "typedoc-dep-update": "^0.9.0",
     "typescript": "2.6.2",
     "typescript-formatter": "^6.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "aws-sdk": "2.198.0"
+    "amazon-cognito-auth-js": "^1.1.9",
+    "amazon-cognito-identity-js": "^2.0.0",
+    "aws-sdk": "2.198.0",
+    "@aws-amplify/common": "^0.0.2",
+    "@aws-amplify/cache": "^0.0.1"
   },
   "jest": {
     "transform": {
@@ -64,6 +70,10 @@
       "js",
       "json",
       "jsx"
+    ],
+    "setupFiles": [
+      "./__mocks__/SessionStorage.js",
+      "./__mocks__/LocalStorage.js"
     ],
     "testEnvironment": "jsdom",
     "mapCoverage": true,
